logs/thredds-security-test.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bin'...
Compiling './lib/python3.5/site-packages/bin/check_catalog.py'...
***   File "./lib/python3.5/site-packages/bin/check_catalog.py", line 65
    print "### Unexpected result ###"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bin/check_files.py'...
***   File "./lib/python3.5/site-packages/bin/check_files.py", line 56
    print "### Unexpected result ###"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bin/check_url.py'...
***   File "./lib/python3.5/site-packages/bin/check_url.py", line 37
    print return_code, return_message
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/thredds_security_test'...
Listing './lib/python3.5/site-packages/thredds_security_test/lib'...
Compiling './lib/python3.5/site-packages/thredds_security_test/lib/dataset_access.py'...
***   File "./lib/python3.5/site-packages/thredds_security_test/lib/dataset_access.py", line 21
    print service.name, service.service_type
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/thredds_security_test/lib/httpget.py'...
***   File "./lib/python3.5/site-packages/thredds_security_test/lib/httpget.py", line 121
    print "Not using proxy"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/thredds_security_test/test'...
Listing './lib/python3.5/site-packages/thredds_security_test-0.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
